[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xspass"
version = "0.3"
authors = [
    { name = "XasdesNew", email = "xasdesnew@gmail.com" },
]
description = "Мощный и гибкий генератор паролей для Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/XasdesNew/xspass"